Bug 415012: Fix deadSpaceGap computation and restore deadSpaceGap subtraction in PrintPreviewNavigate.  r+sr=roc, a1.9=beltzner